# pose-validation

./: .gitignore  camera.yml  facedetect  gitignore.txt  imagelist.yaml
calibrationWebcam/: camera.xml  camera.yaml  camptureCamera.py  tmpCalibation.cpp
checkerBoard/: plot.py  poseEstBad.py  poseEstGood.py  test.py
checkerBoard/markers/: genImg.py
checkerBoard/record/: camerapose.py  main.py  save_snaps.py
checkerBoard/record/logsAndCode/: label.py
checkerBoard/record/logsAndCode/LogRun11/: attPos_log.csv
checkerBoard/record/logsAndCode/cpp/: CMakeLists.txt  estimateE.cpp  main.cpp  main_backup.cpp
checkerBoard/record/logsAndCode/cpp/classes/: GridMap.h  Observations.h
checkerBoard/record/logsAndCode/cpp/helpers/: dbscan.h  helper.h  lineFit.h  localMin.h
checkerBoard/record/logsAndCode/cpp/oldCode/: mainOld.cpp  triangulate
checkerBoard/record/logsAndCode/cpp/resources/: CMakeCache.txt
checkerBoard/record/logsAndCode/cpp/utils/: bresenham2D.h  conversions.h  display.h  getKeypoints.h  readcsv.h  triangulate.cpp  triangulateOrb.h
checkerBoard/record/logsAndCode/cpp/utils/line/: berham3D.cpp
new_code_clean/: readme.md
new_code_clean/testing_repo/take photos/: DisplayImage  main.cpp  test
new_code_clean/testing_repo/viz/: CMakeLists.txt  DisplayImage  main.cpp
new_code_clean/testing_repo/viz/CMakeCacheFiles/: CMakeCache.txt  Makefile  cmake_install.cmake
new_code_clean/tex_doumentation/: main.tex
new_code_clean/tex_doumentation/build_latex/: main.aux  main.dvi  main.fdb_latexmk  main.fls  main.toc
(+12 files in other folders)
